--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages":[
+      "pages/guide/guide",
       "pages/search/search",
       "pages/splash/splash",
       "pages/country/country",
